# jawk

./: .gitignore  LICENSE.txt  README.md  SECURITY.md
gnu-libjit/: Cargo.toml  README.md
gnu-libjit-sys/: .gitignore  Cargo.toml  build.rs  gen_bindings.sh
gnu-libjit-sys/examples/: floats.rs  main.rs
gnu-libjit-sys/libjit/: bootstrap
gnu-libjit/examples/: abis.rs  branch_with_result.rs  branching.rs  function_calls.rs  load_and_store.rs  mult.rs  mult2.rs  pointers.rs
gnu-libjit/src/: abi.rs  context.rs  function.rs  jit_type.rs  label.rs  lib.rs  test.rs  util.rs  value.rs
jawk/: .gitignore  Cargo.toml  data  tt.x1
jawk/programs/: LICENSE  t.8.x
jawk/src/: args.rs  main.rs  printable_error.rs  test.rs  transformer.rs  typing.rs
jawk/src/codgen/: helpers.rs  mod.rs  scopes.rs  subroutines.rs  value.rs  variable_extract.rs
jawk/src/columns/: mod.rs
jawk/src/lexer/: mod.rs  types.rs
jawk/src/parser/: mod.rs  test.rs  transformer.rs  types.rs
jawk/src/runtime/: call_log.rs  live.rs  mod.rs  testing.rs
jawk/src/typing/: function_pass.rs  inference_pass.rs  mod.rs  test.rs  types.rs
mawk-regex/: Cargo.toml
mawk-regex-sys/: .gitignore  Cargo.toml  README.md  build.rs  gen_bindings.sh
mawk-regex-sys/mawk-1.3.4-20200120/: MANIFEST  nstd.h  rexp.c  rexp.h  rexp2.c  vs6.mak
mawk-regex-sys/mawk-1.3.4-20200120/msdos/: vs2008.mak
mawk-regex-sys/src/: bindings.rs  lib.rs
mawk-regex/examples/: regex.rs
mawk-regex/src/: lib.rs
