[package]
name = "gnu-libjit-sys"
version = "0.0.8"
build = "build.rs"
edition = "2018"
description = "Rust bindings for libjit compiler"
license = " GPL-2.0-only"
homepage = "https://github.com/n8ta/gnu-libjit"
repository = "https://github.com/n8ta/gnu-libjit-sys"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
pkg-config = "0.3"