[package]
name = "jawk"
version = "0.2.0"
edition = "2021"

[dependencies]
gnu-libjit = { path = "../gnu-libjit" }
mawk-regex = { path = "../mawk-regex" }
immutable-chunkmap = "1.0.4"
tempfile = "3.3.0"
libc = "0.2.127"
lru-cache = "0.1.2"

[[bin]]
name = "jawk"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1